--- a/projects/MIR/frontend/sass/defaultModules/media.sass
+++ b/projects/MIR/frontend/sass/defaultModules/media.sass
@@ -211,6 +211,9 @@
       .t-trailer
         top: 11%
         left: 29%
+  .t-pageNotFound
+    width: 100%
+    padding: 0 24px
 
 
 @media (max-width: 800px)
