--- a/projects/MIR/frontend/sass/Modules/Main/default.sass
+++ b/projects/MIR/frontend/sass/Modules/Main/default.sass
@@ -4,81 +4,51 @@ main
   .t-controlSection
     position: absolute
     bottom: 16px
-    //left: 50%
-    //transform: translate(-50%)
-    //width: 280px
     width: 100%
-    //overflow: hidden
     height: auto
     .t-controlHandler
+      position: relative
+      width: 300px
+      height: 100px
+      margin: 0 auto
       text-align: center
+      overflow: hidden
       .t-controlItemsHolder
-        margin: 0 auto
-        border: 1px solid $white
+        margin: 50px auto 0 auto
+        //border: 1px solid $white
         @include on-circle(12, 25em, 2.5em)
         display: flex
-        transform: rotate(-30deg) scale(-1)
         transition: transform 1s
         position: absolute
+        left: -58px
+        right: 0
+        top: 10px
         &.t-airActive
-          transform: rotate(0deg) scale(-1)
+          transform: rotate(-30deg)
         &.t-waterActive
-          transform: rotate(-60deg) scale(-1)
-          //.t-defaultState
-          //  &:nth-child(5)
-          //    transform: rotate(-7deg) translateY(0) translateX(-10.6px)
-          //  &:nth-child(6)
-          //    transform: rotate(15deg) translateY(25.4px) translateX(-27.6px)
-          //  &:nth-child(7)
-          //    transform: rotate(35deg) translateY(90.4px) translateX(-28.6px)
+          transform: rotate(30deg)
         &.t-planeCloneActive
-          transform: rotate(-90deg) scale(-1)
-          //.t-defaultState
-          //  &:nth-child(6)
-          //    transform: rotate(4deg) translateY(16.4px) translateX(-49.6px)
-          //  &:nth-child(7)
-          //    transform: rotate(34deg) translateY(93.4px) translateX(-40.6px)
-          //  &:nth-child(8)
-          //    transform: rotate(49deg) translateY(181.4px) translateX(4.4px)
+          transform: rotate(60deg)
         &.t-waterCloneActive
-          transform: rotate(30deg) scale(-1)
-          //.t-defaultState
-          //  &:nth-child(2)
-          //    transform: rotate(-67deg) translateY(173.4px) translateX(-87.6px)
-          //  &:nth-child(3)
-          //    transform: rotate(-45deg) translateY(88px) translateX(0)
-          //  &:nth-child(4)
-          //    transform: rotate(-25deg) translateY(10.4px) translateX(9.4px)
+          transform: rotate(-60deg)
         .t-controlItem
-          //position: relative
+          cursor: pointer
           transition: 1s
           svg
             fill: $white
-          //padding: 0 34px
           &:not(.active)
             opacity: .3
-        //.t-defaultState
-        //  &:nth-child(1)
-        //    transform: rotate(-85deg) translateY(302.4px) translateX(-237.6px)
-        //  &:nth-child(2)
-        //    transform: rotate(-70deg) translateY(213.4px) translateX(-92.6px)
-        //  &:nth-child(3)
-        //    transform: rotate(-55deg) translateY(110px) translateX(-3px)
-        //  &:nth-child(4)
-        //    transform: rotate(-15deg) translateY(22.4px) translateX(21.4px)
-        //  &:nth-child(6)
-        //    transform: rotate(15deg) translateY(22.4px) translateX(-21.6px)
-        //  &:nth-child(7)
-        //    transform: rotate(55deg) translateY(110.4px) translateX(3.4px)
-        //  &:nth-child(8)
-        //    transform: rotate(70deg) translateY(213.4px) translateX(91.4px)
-        //  &:nth-child(9)
-        //    transform: rotate(85deg) translateY(302.4px) translateX(238.4px)
-
-
 
       .t-bottomArc
-        margin-top: 8px
+        position: absolute
+        left: 61px
+        top: 59px
+        svg
+          fill: $white
+      .t-bottomArrow
+        position: absolute
+        left: 136px
+        top: 70px
       &.active
         .t-controlItemsHolder
           .t-controlItem
@@ -89,30 +59,11 @@ main
               svg
                 fill: rgba(0,0,0,.3)
         .t-bottomArc
-          .t-arc
-            stroke: rgba(0,0,0,.3)
+          svg
+            fill: rgba(0,0,0,.3)
         .t-bottomArrow
           .t-bottomArr
             stroke: rgba(0,0,0,.3)
-
-
-//.t-frame
-//  mix-blend-mode: overlay
-//  width: 200px
-//  height: 100vh
-//  background: $white
-//  position: absolute
-//  left: 0
-//  top: 0
-//  bottom: 0
-//  &:after
-//    content: ''
-//    position: absolute
-//    left: 100%
-//    top: 0%
-//    border-left: 60px solid $white
-//    border-bottom: 50vh solid transparent
-//    border-top: 50vh solid transparent
 
 .t-frame
   -webkit-clip-path: polygon(0 0, 50% 0, 100% 50%, 50% 100%, 0% 100%)
