--- a/projects/MIR/frontend/sass/Modules/Contacts/contacts.sass
+++ b/projects/MIR/frontend/sass/Modules/Contacts/contacts.sass
@@ -35,6 +35,11 @@
           color: $secondBlack
           border-bottom: 1px dashed rgba(51, 51, 51, 0.20)
           padding-bottom: 4px
+          transition: border .3s ease
+      &.is-active
+        div
+          .t-middleText
+            border-bottom-color: transparent
     .t-accordItemContent
       padding-top: 16px
       padding-bottom: 26px
