--- a/projects/MIR/frontend/sass/Modules/KeyFrames/keyFrames.sass
+++ b/projects/MIR/frontend/sass/Modules/KeyFrames/keyFrames.sass
@@ -21,3 +21,14 @@
   to
     opacity: 0
     transform: scale(.95)
+
+
+@keyframes loader
+  0%
+    transform: rotate(-1deg)
+  30%
+    transform: rotate(-31deg)
+  60%
+    transform: rotate(-61deg)
+  100%
+    transform: rotate(-91deg)
