--- a/projects/MIR/frontend/sass/Modules/Header/header.sass
+++ b/projects/MIR/frontend/sass/Modules/Header/header.sass
@@ -6,6 +6,8 @@ header
   top: 40px
   left: 0
   right: 0
+  transition: 1s ease-in-out
+  animation: header 1s ease-in-out
   .t-headerLogoWrapper
     .t-headerLogoLink
       text-decoration: none
