--- a/projects/MIR/frontend/sass/Modules/KeyFrames/keyFrames.sass
+++ b/projects/MIR/frontend/sass/Modules/KeyFrames/keyFrames.sass
@@ -32,3 +32,36 @@
     transform: rotate(-61deg)
   100%
     transform: rotate(-91deg)
+
+@keyframes header
+  from
+    opacity: 0
+    transform: translateY(-150%)
+  to
+    transform: none
+    opacity: 1
+
+@keyframes conrolSection
+  from
+    opacity: 0
+    transform: translateY(100%)
+  to
+    transform: none
+    opacity: 1
+
+@keyframes jumbotronLeft
+  from
+    opacity: 0
+    transform: translateY(-50px)
+  to
+    transform: none
+    opacity: 1
+
+@keyframes jumbotronRight
+  from
+    opacity: 0
+    transform: translateY(-50px)
+  to
+    transform: none
+    opacity: 1
+
