--- a/projects/newFolderFan/frontend/sass/inside/constructor.sass
+++ b/projects/newFolderFan/frontend/sass/inside/constructor.sass
@@ -68,7 +68,8 @@
               height: 27px
               span
                 letter-spacing: 0
-                font: 17px georgia
+                font: 17px 'Roboto'
+                font-size: 17px
                 line-height: 19px
               div
                 width: 100%
@@ -114,7 +115,7 @@
               height: 27px
               span
                 letter-spacing: 0
-                font: 17px georgia
+                font: 17px 'Roboto'
                 line-height: 19px
             .t-constructorStickerTextOne
               margin-bottom: 8px
@@ -146,7 +147,7 @@
               height: 27px
               span
                 letter-spacing: 0
-                font: 17px georgia
+                font: 17px 'Roboto'
                 line-height: 19px
             .t-constructorStickerTextOne
               margin-bottom: 8px
@@ -179,7 +180,7 @@
               height: 27px
               span
                 letter-spacing: 0
-                font: 17px georgia
+                font: 17px 'Roboto'
                 line-height: 19px
             .t-constructorStickerTextOne
               margin-bottom: 8px
@@ -212,7 +213,7 @@
               height: 27px
               span
                 letter-spacing: 0
-                font: 17px georgia
+                font: 17px 'Roboto'
                 line-height: 19px
             .t-constructorStickerTextOne
               margin-bottom: 12px
@@ -325,6 +326,7 @@
         form
           .t-constructorMainTextEditCard
             display: flex
+            align-items: center
             .t-inputItem
               @include bGrid(3, 2.778%)
               margin-bottom: 0!important
@@ -344,6 +346,9 @@
                   color: #BDBDBD!important
                   font-size: 14px!important
                   line-height: 16px!important
+              .t-customOptionsWrapper
+                margin-bottom: 0
+                padding-bottom: 9px
     .t-constructorMainTextCheck
       margin-top: 40px
       .t-checkControl
