--- a/projects/newFolderFan/frontend/sass/main.sass
+++ b/projects/newFolderFan/frontend/sass/main.sass
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&subset=cyrillic')
 @import "normalize"
+@import "../../css/fonts/fonts.css"
 @import "mixins"
 @import "default"
 @import "header"
