--- a/projects/newFolderFan/frontend/templates/_layout.jade
+++ b/projects/newFolderFan/frontend/templates/_layout.jade
@@ -30,7 +30,6 @@ html(lang="ru-RU")
                         div.t-constructorMainStickersPreview.t-flex.t-flexSB
                             div.t-constructorStickerCardHolder.t-constructorStickerCardHolderOne
                                 div.t-constructorStickerCardHTop(data-check='true')
-                                    div.t-topQuantity 1
                                     div.t-constructorStickerCard
                                         div.t-constructorStickerTextOne
                                                 div
@@ -48,7 +47,6 @@ html(lang="ru-RU")
                                             button(type="button").t-constructorStickerCardQuantityBtn.t-plus
                             div.t-constructorStickerCardHolder.t-constructorStickerCardHolderTwo
                                 div.t-constructorStickerCardHTop(data-check='true')
-                                    div.t-topQuantity 1
                                     div.t-constructorStickerCard.t-flex.t-flexAlign
                                         div.t-constructorStickerImg
                                             div(style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')")
@@ -67,7 +65,6 @@ html(lang="ru-RU")
                                             button(type="button").t-constructorStickerCardQuantityBtn.t-plus
                             div.t-constructorStickerCardHolder.t-constructorStickerCardHolderThird
                                 div.t-constructorStickerCardHTop(data-check='true')
-                                    div.t-topQuantity 1
                                     div.t-constructorStickerCard.t-flex.t-flexAlign
                                         div.t-constructorStickerImg
                                             div(style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')")
@@ -86,7 +83,6 @@ html(lang="ru-RU")
                                             button(type="button").t-constructorStickerCardQuantityBtn.t-plus
                             div.t-constructorStickerCardHolder.t-constructorStickerCardHolderFour
                                 div.t-constructorStickerCardHTop(data-check='true')
-                                    div.t-topQuantity 1
                                     div.t-constructorStickerCard
                                         div.t-constructorStickerImg
                                             div(style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')")
@@ -104,7 +100,6 @@ html(lang="ru-RU")
                                             button(type="button").t-constructorStickerCardQuantityBtn.t-plus
                             div.t-constructorStickerCardHolder.t-constructorStickerCardHolderFive
                                 div.t-constructorStickerCardHTop(data-check='true')
-                                    div.t-topQuantity 1
                                     div.t-constructorStickerCard.t-flex.t-flexAlign
                                         div.t-constructorStickerImg
                                             div(style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')")
@@ -173,10 +168,11 @@ html(lang="ru-RU")
                                             div.t-inputItem
                                                 span.t-titleConstructorDefault Шрифт
                                                 select.t-customOptions
-                                                    option(value='niggas') Негры
-                                                    option(value='moreNiggas') Еще негры
-                                                    option(value='pokemons') Покемоны
-                                                    option(value='ditch') Дичь
+                                                    option(value='roboto') Roboto
+                                                    option(value='ubuntu') Ubuntu
+                                                    option(value='comicSansMS') Comic Sans MS
+                                                    option(value='georgia') Georgia
+                                                    option(value='openSans') Open Sans
                                 div.t-constructorMainTextCheck.t-checkBoxesCtrl
                                     input(id="textCheck" type="checkbox").t-checkbox.t-hideSomething
                                     label(for="textCheck").t-checkControl Я проверил текст — ошибок и опечаток нет
