--- a/projects/newFolderFan/frontend/sass/_default.sass
+++ b/projects/newFolderFan/frontend/sass/_default.sass
@@ -7,7 +7,7 @@ html, body
   width: 100%
   min-width: 320px
   min-height: 100vh
-  font-family: 'Roboto Condensed', sans-serif
+  font-family: 'Roboto Condensed'
   color: #1A1A1A
 
 body
@@ -982,3 +982,53 @@ main
     color: #fff
     padding-bottom: 5px
     display: block
+
+.t-customOptionsWrapper
+  position: relative
+  margin: 0 auto 24px auto
+  width: 272px
+  padding: 0 16px 0 16px
+  border-radius: 20px 20px 0 0
+  .t-styledSelectorBox
+    width: 100%
+    padding-bottom: 11px
+    border-bottom: 1px solid #F5F5F5
+    font-weight: bold
+    font-size: 16px
+    line-height: 19px
+    color: rgba(79, 79, 79, .30)
+    position: relative
+    cursor: pointer
+    background-color: #fff
+    &:before, &:after
+      content: ''
+      width: 6px
+      height: 2px
+      position: absolute
+      background-color: #4F4F4F
+      border-radius: 2px
+      top: 8px
+      right: 0
+    &:after
+      transform: rotate(90deg)
+  .t-listOptions
+    position: absolute
+    top: 100%
+    left: 0
+    right: 0
+    margin: 0
+    list-style: none
+    z-index: 999
+    background-color: #fff
+    padding: 10px 0 16px 16px
+    border-radius: 0 0 20px 20px
+    display: none
+    li
+      font-size: 16px
+      line-height: 19px
+      color: #4F4F4F
+      font-weight: bold
+      cursor: pointer
+      &:not(:last-child)
+        margin-bottom: 8px
+
