--- a/projects/newFolderFan/frontend/templates/_layout.jade
+++ b/projects/newFolderFan/frontend/templates/_layout.jade
@@ -52,9 +52,9 @@ html(lang="ru-RU")
                                             div(style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')")
                                         div.t-constructorStickerTextHolder.t-flex.t-flexColumn
                                             div.t-constructorStickerTextOne
-                                                span
+                                                span.t-spanTag
                                             div.t-constructorStickerTextTwo
-                                                span
+                                                span.t-spanTag
                                 div.t-constructorStickerCardHBottom
                                     div.t-constructorStickerCardSize
                                         span 5 x 1,5 СМ
@@ -70,9 +70,9 @@ html(lang="ru-RU")
                                             div(style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')")
                                         div.t-constructorStickerTextHolder.t-flex.t-flexColumn
                                             div.t-constructorStickerTextOne
-                                                span
+                                                span.t-spanTag
                                             div.t-constructorStickerTextTwo
-                                                span
+                                                span.t-spanTag
                                 div.t-constructorStickerCardHBottom
                                     div.t-constructorStickerCardSize
                                         span 4,5 x 1,5 СМ
@@ -87,9 +87,9 @@ html(lang="ru-RU")
                                         div.t-constructorStickerImg
                                             div(style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')")
                                         div.t-constructorStickerTextOne
-                                            span
+                                            span.t-spanTag
                                         div.t-constructorStickerTextTwo
-                                            span
+                                            span.t-spanTag
                                 div.t-constructorStickerCardHBottom
                                     div.t-constructorStickerCardSize
                                         span 3,5 x 2,5 СМ
@@ -105,9 +105,9 @@ html(lang="ru-RU")
                                             div(style="background-image: url('/images/icons/SVG-optim/defaultSticker.svg')")
                                         div.t-constructorStickerTextHolder.t-flex.t-flexColumn
                                             div.t-constructorStickerTextOne
-                                                span
+                                                span.t-spanTag
                                             div.t-constructorStickerTextTwo
-                                                span
+                                                span.t-spanTag
                                 div.t-constructorStickerCardHBottom
                                     div.t-constructorStickerCardSize
                                         span 5 x 2,5 СМ
@@ -136,7 +136,7 @@ html(lang="ru-RU")
                                 h3.t-constructorImgPickerTitle.t-titleConstructorDefault Изображение
                                 div.t-constructorImgPickerCategory
                                     select.t-customOptions
-                                        option(value='niggas') Негры
+                                        option(value='all') Все
                                         option(value='moreNiggas') Еще негры
                                         option(value='pokemons') Покемоны
                                         option(value='ditch') Дичь
@@ -170,7 +170,7 @@ html(lang="ru-RU")
                                                 select.t-customOptions
                                                     option(value='roboto') Roboto
                                                     option(value='ubuntu') Ubuntu
-                                                    option(value='comicSansMS') Comic Sans MS
+                                                    option(value='pangolin') Pangolin
                                                     option(value='georgia') Georgia
                                                     option(value='openSans') Open Sans
                                 div.t-constructorMainTextCheck.t-checkBoxesCtrl
