--- a/projects/newFolderFan/frontend/sass/_default.sass
+++ b/projects/newFolderFan/frontend/sass/_default.sass
@@ -1022,13 +1022,17 @@ main
     background-color: #fff
     padding: 10px 0 16px 16px
     border-radius: 0 0 20px 20px
-    display: none
+    opacity: 0
+    pointer-events: none
     li
       font-size: 16px
       line-height: 19px
       color: #4F4F4F
       font-weight: bold
       cursor: pointer
+      transition: .3s ease-in-out
+      &:hover
+        color: #26BFD1
       &:not(:last-child)
         margin-bottom: 8px
 
