--- a/projects/newFolderFan/frontend/sass/inside/constructor.sass
+++ b/projects/newFolderFan/frontend/sass/inside/constructor.sass
@@ -327,6 +327,7 @@
   .t-constructorMainStickersSettingsWrapper
     margin-top: 40px
     .t-constructorMainColorAndStickersPicker
+      display: none
       .t-constructorMainColorPickerWrapper
         margin-bottom: 40px
         .t-constructorColorPickerTitle
@@ -335,6 +336,7 @@
         .t-constructorImgPickerTitle
           margin-bottom: 24px
   .t-constructorMainTextEditorWrapper
+    display: none
     .t-constructorMainTextEditor
       max-width: 864px
       width: 100%
@@ -384,8 +386,11 @@
           line-height: 30px
 
   .t-constructorMainStickersButtonsWrapper
-    text-align: center
-    margin-top: 50px
+    margin: 50px auto 0 auto
+    .t-constructorNextButton
+      margin-left: 16px
+    .t-constructorPrevButton
+      display: none
 
 
 .t-titleConstructorDefault
