--- a/projects/newFolderFan/frontend/templates/_layout.jade
+++ b/projects/newFolderFan/frontend/templates/_layout.jade
@@ -186,8 +186,8 @@ html(lang="ru-RU")
 
 
 
-                    div.t-constructorMainStickersButtonsWrapper
-
+                    div.t-constructorMainStickersButtonsWrapper.t-flex.t-flexCenter
+                        button.t-constructorPrevButton Back
                         button.t-constructorNextButton.t-btn
                             span Следующий шаг
 
