--- a/projects/newFolderFan/frontend/sass/_default.sass
+++ b/projects/newFolderFan/frontend/sass/_default.sass
@@ -169,6 +169,18 @@ main
     opacity: 0
 
 
+.t-constructorPrevButton
+  width: 40px
+  height: 40px
+  background-color: #F5F5F5
+  border-radius: 50%
+  display: flex
+  justify-content: center
+  align-items: center
+  outline: none
+  border: none
+  cursor: pointer
+
 .t-sectionTitle
   font-weight: bold
   font-size: 26px
@@ -1023,7 +1035,6 @@ main
     padding: 10px 0 16px 16px
     border-radius: 0 0 20px 20px
     opacity: 0
-    pointer-events: none
     li
       font-size: 16px
       line-height: 19px
