--- a/projects/newFolderFan/frontend/sass/_default.sass
+++ b/projects/newFolderFan/frontend/sass/_default.sass
@@ -1034,7 +1034,7 @@ main
     background-color: #fff
     padding: 10px 0 16px 16px
     border-radius: 0 0 20px 20px
-    opacity: 0
+    display: none
     li
       font-size: 16px
       line-height: 19px
