--- a/projects/newFolderFan/frontend/sass/inside/constructor.sass
+++ b/projects/newFolderFan/frontend/sass/inside/constructor.sass
@@ -387,7 +387,7 @@
 
   .t-constructorMainStickersButtonsWrapper
     margin: 50px auto 0 auto
-    .t-constructorNextButton
+    .t-btn
       margin-left: 16px
     .t-constructorPrevButton
       display: none
