--- a/projects/newFolderFan/frontend/templates/_layout.jade
+++ b/projects/newFolderFan/frontend/templates/_layout.jade
@@ -27,7 +27,7 @@ html(lang="ru-RU")
 
                     div.t-constructorMainStickersPreviewWrapper
                         h3.t-constructorMainStickersPreviewTitle Форма и количество
-                        div.t-constructorMainStickersPreview.t-flex.t-flexSB
+                        div.t-constructorMainStickersPreview.t-flex.t-flexSB#t-constructorMainStickersPreview
                             div.t-constructorStickerCardHolder.t-constructorStickerCardHolderOne
                                 div.t-constructorStickerCardHTop(data-check='true')
                                     div.t-constructorStickerCard
@@ -187,7 +187,12 @@ html(lang="ru-RU")
 
 
                     div.t-constructorMainStickersButtonsWrapper.t-flex.t-flexCenter
-                        button.t-constructorPrevButton Back
+                        div.t-constructorPrevButton
+                            svg(width='40', height='40', xmlns='http://www.w3.org/2000/svg')
+                                g(fill='none')
+                                    rect(width='40', height='40', rx='20', fill='#F5F5F5')
+                                    path(d='M15.206 20.068l4.475-3.889a.78.78 0 0 1 .994 0 .556.556 0 0 1 0 .864l-3.274 2.846h6.896c.388 0 .703.274.703.611 0 .337-.315.611-.703.611H17.4l3.274 2.846a.556.556 0 0 1 0 .864.78.78 0 0 1-.994 0l-4.475-3.889a.556.556 0 0 1 0-.864z', stroke='#4F4F4F', stroke-width='2')
+
                         button.t-constructorNextButton.t-btn
                             span Следующий шаг
 
