--- a/projects/newFolderFan/frontend/sass/_default.sass
+++ b/projects/newFolderFan/frontend/sass/_default.sass
@@ -172,14 +172,11 @@ main
 .t-constructorPrevButton
   width: 40px
   height: 40px
-  background-color: #F5F5F5
   border-radius: 50%
-  display: flex
-  justify-content: center
-  align-items: center
-  outline: none
-  border: none
   cursor: pointer
+  svg
+    width: 100%
+    height: 100%
 
 .t-sectionTitle
   font-weight: bold
