--- a/projects/newFolderFan/frontend/templates/_layout.jade
+++ b/projects/newFolderFan/frontend/templates/_layout.jade
@@ -30,7 +30,7 @@ html(lang="ru-RU")
                         div.t-constructorMainStickersPreview.t-flex.t-flexSB#t-constructorMainStickersPreview
                             div.t-constructorStickerCardHolder.t-constructorStickerCardHolderOne
                                 div.t-constructorStickerCardHTop(data-check='true')
-                                    div.t-constructorStickerCard
+                                    div.t-constructorStickerCard#idThis
                                         div.t-constructorStickerTextOne
                                                 div
                                         div.t-constructorStickerImg
@@ -197,4 +197,5 @@ html(lang="ru-RU")
                             span Следующий шаг
 
         script(src="/js/vendor.min.js")
+        script(src="/js/plugins/jspdf.min.js")
         script(src="/js/main.min.js")
