--- a/projects/newFolderFan/frontend/sass/inside/constructor.sass
+++ b/projects/newFolderFan/frontend/sass/inside/constructor.sass
@@ -70,6 +70,8 @@
             top: -8px
         .t-constructorStickerCard
           transition: .3s ease-in-out
+          svg
+            pointer-events: none
           .t-constructorStickerTextOne, .t-constructorStickerTextTwo
             span
               letter-spacing: 0
@@ -89,18 +91,9 @@
               background-size: contain
         &.t-constructorStickerCardHolderOne
           .t-constructorStickerCard
-            padding: 19px
-            border-radius: 50%
-            position: absolute
-            left: -25%
-            right: 0
-            bottom: 0
-            top: 0
-            margin: auto
-            width: 300px
-            height: 300px
-            background-color: #26BFD1
-            transform: scale(.32)
+            padding: 20px 52px
+            width: 100%
+            height: 100%
             .t-constructorStickerTextOne, .t-constructorStickerTextTwo
               position: absolute
               width: 320px
@@ -132,17 +125,9 @@
               margin: auto
         &.t-constructorStickerCardHolderTwo
           .t-constructorStickerCard
-            padding: 25px 39px 25px 25px
-            position: absolute
-            left: -75%
-            right: 0
-            bottom: 0
-            top: 0
-            margin: auto
-            width: 500px
-            height: 150px
-            background-color: #26BFD1
-            transform: scale(.32)
+            padding: 44px 20px
+            height: 100%
+            width: 100%
             .t-constructorStickerTextHolder
             .t-constructorStickerTextOne, .t-constructorStickerTextTwo
               display: flex
@@ -158,17 +143,9 @@
               border-radius: 50%
         &.t-constructorStickerCardHolderThird
           .t-constructorStickerCard
-            padding: 18px 30px 18px 18px
-            position: absolute
-            left: -63%
-            right: 0
-            bottom: 0
-            top: 0
-            margin: auto
-            width: 450px
-            height: 100px
-            background-color: #26BFD1
-            transform: scale(.32)
+            padding: 51px 28px 53px 28px
+            height: 100%
+            width: 100%
             .t-constructorStickerTextHolder
             .t-constructorStickerTextOne, .t-constructorStickerTextTwo
               display: flex
@@ -184,18 +161,9 @@
               border-radius: 50%
         &.t-constructorStickerCardHolderFour
           .t-constructorStickerCard
-            border-radius: 13px
-            padding: 24px 15px 24px 15px
-            position: absolute
-            left: -37%
-            right: 0
-            bottom: 0
-            top: 0
-            margin: auto
-            width: 350px
-            height: 250px
-            background-color: #26BFD1
-            transform: scale(.32)
+            padding: 28px 44px
+            height: 100%
+            width: 100%
             .t-constructorStickerTextHolder
               width: 100%
             .t-constructorStickerTextOne, .t-constructorStickerTextTwo
@@ -213,18 +181,9 @@
               margin: 0 auto 20px auto
         &.t-constructorStickerCardHolderFive
           .t-constructorStickerCard
-            border-radius: 13px
-            padding: 65px 20px 65px 24px
-            position: absolute
-            left: -75%
-            right: 0
-            bottom: 0
-            top: 0
-            margin: auto
-            width: 500px
-            height: 250px
-            background-color: #26BFD1
-            transform: scale(.32)
+            padding: 28px 20px
+            height: 100%
+            width: 100%
             .t-constructorStickerTextHolder
               width: 320px
             .t-constructorStickerTextOne, .t-constructorStickerTextTwo
