--- a/projects/newFolderFan/frontend/templates/_layout.jade
+++ b/projects/newFolderFan/frontend/templates/_layout.jade
@@ -39,20 +39,10 @@ html(lang="ru-RU")
                                                     tspan.textSvgTwo(style="font-family:'Robooto'; text-transform: uppercase; font-size:4.7061px;")
                                             path#SVGID_x5F_2_x5F_.st1(fill="transparent" d='M13.1,40.5C14.1,25.1,26.9,13,42.5,13s28.4,12.2,29.4,27.5H13.1z')
                                             text(text-anchor='middle')
-                                                textpath(xlink:href='#SVGID_x5F_2_x5F_', startoffset='45')
+                                                textpath(xlink:href='#SVGID_x5F_2_x5F_', startoffset='44.5')
                                                     tspan.textSvgOne(style="font-family:'Robooto'; text-transform: uppercase; font-size:4.8189px;")
-                                            rect#Frame_Icon.st2(x='27.1', y='26.6', width='31.7', height='31.7')
-                                            g#Icon
-                                                path#path_1_46.st3(d='M58.8,43.9c0,7.8-6.4,14.2-14.4,14.2c-7.9,0-14.4-6.4-14.4-14.2s6.4-14.2,14.4-14.2\
-                                            S58.8,36.1,58.8,43.9z')
-                                                path#path_2_46(d='M44.1,50.1h-2.6c-3.3,0-6-2.5-6-5.8c0-0.4,0.3-0.7,0.7-0.7s0.7,0.3,0.7,0.7c0,2.4,2,4.4,4.5,4.4H44\
-                                            c2.5,0,4.5-1.9,4.5-4.3c0-0.4,0.3-0.7,0.7-0.7s0.7,0.3,0.7,0.7C50.1,47.6,47.4,50.1,44.1,50.1z')
-                                                path#path_3_46(d='M39.4,38.1c-0.2,0-0.4-0.1-0.5-0.2c-0.7-0.7-1.8-0.7-2.5-0.1c-0.3,0.3-0.7,0.3-1,0s-0.3-0.7,0-1\
-                                            c1.2-1.2,3.3-1.2,4.6,0.1c0.3,0.3,0.3,0.7,0,1C39.7,38.1,39.5,38.1,39.4,38.1z')
-                                                path#path_4_46(d='M49.3,38.1c-0.2,0-0.4-0.1-0.5-0.2c-0.7-0.7-1.8-0.7-2.5-0.1c-0.3,0.3-0.7,0.3-1,0s-0.3-0.7,0-1\
-                                            c1.2-1.2,3.3-1.2,4.6,0.1c0.3,0.3,0.3,0.7,0,1C49.6,38.1,49.4,38.1,49.3,38.1z')
-                                                path#path_5_46(d='M42.2,57.1c-8.3,0-15.1-6.7-15.1-14.9s6.8-14.9,15.1-14.9S57.3,34,57.3,42.2S50.5,57.1,42.2,57.1z\
-                                            M42.2,28.6c-7.5,0-13.7,6-13.7,13.5c0,7.4,6.1,13.5,13.7,13.5c7.5,0,13.7-6,13.7-13.5C55.9,34.7,49.7,28.6,42.2,28.6z')
+                                            rect#Frame_Icon.st2(fill="transparent" x='27.1', y='27.1', width='31.7', height='31.7')
+                                            svg(width='31.7', height='31.7', x='27.1', y='27.1',).t-groupIconHolder
 
                                 div.t-constructorStickerCardHBottom
                                     div.t-constructorStickerCardSize
@@ -70,17 +60,7 @@ html(lang="ru-RU")
                                             text.st1.st2.textSvgOne(style="font-family:'Robooto'; text-transform: uppercase; font-size:4.7061px;" transform='matrix(1 0 0 1 39.9682 17.9795)')
                                             text.st1.st2.textSvgTwo(style="font-family:'Robooto'; text-transform: uppercase; font-size:4.7061px;" transform='matrix(1 0 0 1 39.9682 27.9014)')
                                             rect#Frame_Icon.st3(fill='transparent' x='11.3', y='11.3', width='19.8', height='19.8')
-                                            g#Icon
-                                                path#path_1_46.st4(d='M31.2,22c0,4.9-4,8.9-9,8.9c-5,0-9-4-9-8.9c0-4.9,4-8.9,9-8.9C27.2,13.2,31.2,17.1,31.2,22z')
-                                                path#path_2_46(d='M22,25.9h-1.6c-2.1,0-3.7-1.6-3.7-3.6c0-0.2,0.2-0.4,0.5-0.4c0.3,0,0.5,0.2,0.5,0.4c0,1.5,1.2,2.7,2.8,2.7\
-                                            H22c1.6,0,2.8-1.2,2.8-2.7c0-0.2,0.2-0.4,0.5-0.4c0.3,0,0.5,0.2,0.5,0.4C25.7,24.3,24.1,25.9,22,25.9z')
-                                                path#path_3_46(d='M19,18.4c-0.1,0-0.2,0-0.3-0.1c-0.4-0.4-1.1-0.4-1.6,0c-0.2,0.2-0.5,0.2-0.6,0c-0.2-0.2-0.2-0.5,0-0.6\
-                                            c0.8-0.8,2.1-0.7,2.8,0c0.2,0.2,0.2,0.5,0,0.6C19.2,18.4,19.1,18.4,19,18.4z')
-                                                path#path_4_46(d='M25.2,18.4c-0.1,0-0.2,0-0.3-0.1c-0.4-0.4-1.1-0.4-1.6,0c-0.2,0.2-0.5,0.2-0.6,0c-0.2-0.2-0.2-0.5,0-0.6\
-                                            c0.8-0.8,2.1-0.7,2.8,0c0.2,0.2,0.2,0.5,0,0.6C25.4,18.4,25.3,18.4,25.2,18.4z')
-                                                path#path_5_46(d='M20.8,30.2c-5.2,0-9.4-4.2-9.4-9.3c0-5.1,4.2-9.3,9.4-9.3c5.2,0,9.4,4.2,9.4,9.3\
-                                            C30.2,26.1,26,30.2,20.8,30.2z M20.8,12.5c-4.7,0-8.5,3.8-8.5,8.4c0,4.6,3.8,8.4,8.5,8.4c4.7,0,8.5-3.8,8.5-8.4\
-                                            C29.3,16.3,25.5,12.5,20.8,12.5z')
+                                            svg(x='11.3', y='11.3', width='19.8', height='19.8').t-groupIconHolder
                                 div.t-constructorStickerCardHBottom
                                     div.t-constructorStickerCardSize
                                         span 5 x 1,5 СМ
@@ -97,18 +77,7 @@ html(lang="ru-RU")
                                             text.st1.st2.textSvgTwo(style="font-family:'Robooto'; text-transform: uppercase; font-size:4.7061px;" transform='matrix(1 0 0 1 28.3474 20.8155)')
                                             text.st1.st2.textSvgOne(style="font-family:'Robooto'; text-transform: uppercase; font-size:4.7061px;" transform='matrix(1 0 0 1 28.3474 10.8946)')
                                             rect#Rectangle.st3(fill='transparent' x='5.1', y='5.1', width='18.1', height='18.1')
-                                            g#Icon
-                                                path#path_1_46.st4(d='M23.2,14.9c0,4.5-3.7,8.1-8.2,8.1c-4.5,0-8.2-3.6-8.2-8.1c0-4.5,3.7-8.1,8.2-8.1\
-                                            C19.6,6.8,23.2,10.4,23.2,14.9z')
-                                                path#path_2_46(d='M14.8,18.4h-1.5c-1.9,0-3.4-1.4-3.4-3.3c0-0.2,0.2-0.4,0.4-0.4c0.2,0,0.4,0.2,0.4,0.4\
-                                            c0,1.4,1.1,2.5,2.6,2.5h1.5c1.4,0,2.6-1.1,2.6-2.4c0-0.2,0.2-0.4,0.4-0.4c0.2,0,0.4,0.2,0.4,0.4C18.2,17,16.7,18.4,14.8,18.4z')
-                                                path#path_3_46(d='M12.1,11.6c-0.1,0-0.2,0-0.3-0.1c-0.4-0.4-1-0.4-1.4,0c-0.2,0.2-0.4,0.2-0.6,0c-0.2-0.2-0.2-0.4,0-0.6\
-                                            c0.7-0.7,1.9-0.7,2.6,0c0.2,0.2,0.2,0.4,0,0.6C12.3,11.6,12.2,11.6,12.1,11.6z')
-                                                path#path_4_46(d='M17.8,11.6c-0.1,0-0.2,0-0.3-0.1c-0.4-0.4-1-0.4-1.4,0c-0.2,0.2-0.4,0.2-0.6,0c-0.2-0.2-0.2-0.4,0-0.6\
-                                            c0.7-0.7,1.9-0.7,2.6,0c0.2,0.2,0.2,0.4,0,0.6C18,11.6,17.9,11.6,17.8,11.6z')
-                                                path#path_5_46(d='M13.7,22.4c-4.8,0-8.6-3.8-8.6-8.5c0-4.7,3.9-8.5,8.6-8.5c4.8,0,8.6,3.8,8.6,8.5\
-                                            C22.4,18.6,18.5,22.4,13.7,22.4z M13.7,6.2c-4.3,0-7.8,3.4-7.8,7.7c0,4.2,3.5,7.7,7.8,7.7c4.3,0,7.8-3.4,7.8-7.7\
-                                            C21.5,9.6,18,6.2,13.7,6.2z')
+                                            svg(x='5.1', y='5.1', width='18.1', height='18.1').t-groupIconHolder
 
                                 div.t-constructorStickerCardHBottom
                                     div.t-constructorStickerCardSize
@@ -127,18 +96,7 @@ html(lang="ru-RU")
                                             text.st1.st2.textSvgTwo(style="font-family:'Robooto'; text-transform: uppercase; font-size:4.7061px;" transform='matrix(1 0 0 1 4.2518 61.9164)' text-anchor="middle" x='45')
                                             text.st1.st2.textSvgOne(style="font-family:'Robooto'; text-transform: uppercase; font-size:4.7061px;" transform='matrix(1 0 0 1 4.2518 51.9965)' text-anchor="middle" x='45')
                                             rect#Frame_Icon.st3(fill='transparent' x='37.7', y='11.9', width='23.8', height='23.8')
-                                            g#Icon
-                                                path#path_1_46.st4(d='M61.5,24.9c0,5.8-4.8,10.6-10.8,10.6c-6,0-10.8-4.7-10.8-10.6c0-5.8,4.8-10.6,10.8-10.6\
-                                            C56.7,14.3,61.5,19.1,61.5,24.9z')
-                                                path#path_2_46(d='M50.5,29.5h-2c-2.5,0-4.5-1.9-4.5-4.3c0-0.3,0.2-0.5,0.5-0.5c0.3,0,0.5,0.2,0.5,0.5c0,1.8,1.5,3.2,3.4,3.2\
-                                            h2c1.9,0,3.4-1.4,3.4-3.2c0-0.3,0.2-0.5,0.5-0.5c0.3,0,0.5,0.2,0.5,0.5C54.9,27.6,53,29.5,50.5,29.5z')
-                                                path#path_3_46(d='M46.9,20.6c-0.1,0-0.3-0.1-0.4-0.2c-0.5-0.5-1.4-0.5-1.9,0c-0.2,0.2-0.6,0.2-0.8,0c-0.2-0.2-0.2-0.5,0-0.8\
-                                            c0.9-0.9,2.5-0.9,3.4,0c0.2,0.2,0.2,0.5,0,0.8C47.2,20.5,47,20.6,46.9,20.6z')
-                                                path#path_4_46(d='M54.3,20.6c-0.1,0-0.3-0.1-0.4-0.2c-0.5-0.5-1.4-0.5-1.9,0c-0.2,0.2-0.6,0.2-0.8,0c-0.2-0.2-0.2-0.5,0-0.8\
-                                            c0.9-0.9,2.5-0.9,3.4,0c0.2,0.2,0.2,0.5,0,0.8C54.6,20.5,54.5,20.6,54.3,20.6z')
-                                                path#path_5_46(d='M49,34.6c-6.3,0-11.3-5-11.3-11.1c0-6.1,5.1-11.1,11.3-11.1c6.3,0,11.3,5,11.3,11.1\
-                                            C60.4,29.7,55.3,34.6,49,34.6z M49,13.5c-5.6,0-10.2,4.5-10.2,10c0,5.5,4.6,10,10.2,10c5.6,0,10.2-4.5,10.2-10\
-                                            C59.3,18,54.7,13.5,49,13.5z')
+                                            svg(x='37.7', y='11.9', width='23.8', height='23.8').t-groupIconHolder
 
                                 div.t-constructorStickerCardHBottom
                                     div.t-constructorStickerCardSize
@@ -158,18 +116,7 @@ html(lang="ru-RU")
                                             text.st1.st2.textSvgTwo(style="font-family:'Robooto'; text-transform: uppercase; font-size:4.7061px;" transform='matrix(1 0 0 1 45.3539 42.643)')
                                             text.st1.st2.textSvgOne(style="font-family:'Robooto'; text-transform: uppercase; font-size:4.7061px;" transform='matrix(1 0 0 1 45.3539 31.5873)')
                                             rect#Frame_Icon.st3(fill='transparent' x='11.9', y='23.5', width='23.8', height='23.8')
-                                            g#Icon
-                                                path#path_1_46.st4(d='M35.7,36.5c0,5.8-4.8,10.6-10.8,10.6c-6,0-10.8-4.7-10.8-10.6c0-5.8,4.8-10.6,10.8-10.6\
-                                            C30.9,25.9,35.7,30.7,35.7,36.5z')
-                                                path#path_2_46(d='M24.7,41.1h-2c-2.5,0-4.5-1.9-4.5-4.3c0-0.3,0.2-0.5,0.5-0.5c0.3,0,0.5,0.2,0.5,0.5c0,1.8,1.5,3.2,3.4,3.2\
-                                            h2c1.9,0,3.4-1.4,3.4-3.2c0-0.3,0.2-0.5,0.5-0.5c0.3,0,0.5,0.2,0.5,0.5C29.1,39.2,27.2,41.1,24.7,41.1z')
-                                                path#path_3_46(d='M21.1,32.2c-0.1,0-0.3-0.1-0.4-0.2c-0.5-0.5-1.4-0.5-1.9,0c-0.2,0.2-0.6,0.2-0.8,0c-0.2-0.2-0.2-0.5,0-0.8\
-                                            c0.9-0.9,2.5-0.9,3.4,0c0.2,0.2,0.2,0.5,0,0.8C21.4,32.2,21.3,32.2,21.1,32.2z')
-                                                path#path_4_46(d='M28.5,32.2c-0.1,0-0.3-0.1-0.4-0.2c-0.5-0.5-1.4-0.5-1.9,0c-0.2,0.2-0.6,0.2-0.8,0c-0.2-0.2-0.2-0.5,0-0.8\
-                                            c0.9-0.9,2.5-0.9,3.4,0c0.2,0.2,0.2,0.5,0,0.8C28.8,32.2,28.7,32.2,28.5,32.2z')
-                                                path#path_5_46(d='M23.2,46.3c-6.3,0-11.3-5-11.3-11.1c0-6.1,5.1-11.1,11.3-11.1c6.3,0,11.3,5,11.3,11.1\
-                                            C34.6,41.3,29.5,46.3,23.2,46.3z M23.2,25.2c-5.6,0-10.2,4.5-10.2,10c0,5.5,4.6,10,10.2,10c5.6,0,10.2-4.5,10.2-10\
-                                            C33.5,29.7,28.9,25.2,23.2,25.2z')
+                                            svg(x='11.9', y='23.5', width='23.8', height='23.8').t-groupIconHolder
 
                                 div.t-constructorStickerCardHBottom
                                     div.t-constructorStickerCardSize
@@ -200,22 +147,23 @@ html(lang="ru-RU")
                                 div.t-constructorImgPickerCategory
                                     select.t-customOptions
                                         option(value='all') Все
-                                        option(value='moreNiggas') Еще негры
+                                        option(value='spider') Паук
+                                        option(value='happy') Happy
                                         option(value='pokemons') Покемоны
                                         option(value='ditch') Дичь
                                 div.t-constructorMainImgPicker
                                     ul.t-constructorDefaultPicker.t-mainList
                                         -for(var i = 0; i < 14; i++)
-                                            li(data-img='/images/icons/SVG-optim/spider.svg')
+                                            li(data-category='spider' data-img='/images/icons/SVG-optim/spider.svg')
                                                 div(style="background-image: url('/images/icons/SVG-optim/spider.svg')")
                                         -for(var i = 0; i < 14; i++)
-                                            li(data-img='/images/icons/SVG-optim/happy.svg')
+                                            li(data-category='happy' data-img='/images/icons/SVG-optim/happy.svg')
                                                 div(style="background-image: url('/images/icons/SVG-optim/happy.svg')")
                                         -for(var i = 0; i < 14; i++)
-                                            li(data-img='/images/icons/SVG-optim/jigglypuff.svg')
+                                            li(data-category='pokemons' data-img='/images/icons/SVG-optim/jigglypuff.svg')
                                                 div(style="background-image: url('/images/icons/SVG-optim/jigglypuff.svg')")
                                         -for(var i = 0; i < 14; i++)
-                                            li(data-img='/images/icons/SVG-optim/monster.svg')
+                                            li(data-category='ditch' data-img='/images/icons/SVG-optim/monster.svg')
                                                 div(style="background-image: url('/images/icons/SVG-optim/monster.svg')")
                         div.t-constructorMainTextEditorWrapper
                             div.t-constructorMainTextEditor
