--- a/projects/newFolderFan/frontend/sass/_default.sass
+++ b/projects/newFolderFan/frontend/sass/_default.sass
@@ -221,7 +221,8 @@ main
   position: absolute
   width: 100%
   height: auto
-  bottom: -400px
+  //bottom: -400px
+  bottom: 0
   left: 0
   right: 0
   z-index: -2
@@ -640,6 +641,7 @@ main
   background: rgba(0,0,0,.5)
   outline: none
   border: none
+  display: none
 
 .mfp-container
   top: 50%!important
