--- a/projects/newFolderFan/frontend/sass/inside/constructor.sass
+++ b/projects/newFolderFan/frontend/sass/inside/constructor.sass
@@ -8,6 +8,12 @@
   z-index: 9999
   max-height: 100vh
   overflow-y: auto
+  display: none
+  .t-closeConstructor
+    position: absolute
+    top: 40px
+    right: 40px
+    cursor: pointer
   .t-constructorMainPriceWrapper
     margin-bottom: 32px
     .t-constructorMainQuantityAndPrice
