--- a/projects/newFolderFan/frontend/sass/mainPage.sass
+++ b/projects/newFolderFan/frontend/sass/mainPage.sass
@@ -30,7 +30,7 @@
               color: #26BFD1
 
 .t-jumbotronBottomCardsWrapper
-  overflow-x: scroll
+  //overflow-x: scroll
   .t-jumbotronBottomCardsWrapperSectionOne
     display: flex
   .t-jumbotronBottomCardsWrapperSectionTwo
